[package]
name = "pyth_oracle_1"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pyth_oracle_1"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
pyth-solana-receiver-sdk = {path="/home/mubariz/Documents/OpenSource/pyth-crosschain/target_chains/solana/pyth_solana_receiver_sdk"}
